src/objects/KS_Organizacion_Producto__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto relacional con productos que describe las características individuales de cada producto para cada org-vtas/canal (SAP)</description>
    <fields>
        <fullName>KS_Canal_de_distribucion__c</fullName>
        <label>Canal de distribución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Estatus_Comercial__c</fullName>
        <label>Estatus Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Estatus_Comercial</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Familia__c</fullName>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_validez_Estatus_Comercial__c</fullName>
        <label>Fecha de validez Estatus Comercial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_ID_Organizacion_Producto__c</fullName>
        <externalId>true</externalId>
        <label>ID Organizacion Producto</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Jerarquia_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jerarquia Producto</label>
        <referenceTo>KS_Jerarquia_Producto__c</referenceTo>
        <relationshipLabel>Organizaciones Producto</relationshipLabel>
        <relationshipName>Organizaciones_Producto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_Ventas__c</fullName>
        <label>Organizacion de Ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Producto_SAP__c</fullName>
        <formula>KS_Producto__r.KS_Id_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Organizaciones Producto</relationshipLabel>
        <relationshipName>Organizaciones_Producto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Serie_Gama__c</fullName>
        <label>Serie/Gama</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
                <value>
                    <fullName>034</fullName>
                </value>
                <value>
                    <fullName>035</fullName>
                </value>
                <value>
                    <fullName>036</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>045</fullName>
                </value>
                <value>
                    <fullName>049</fullName>
                </value>
                <value>
                    <fullName>051</fullName>
                </value>
                <value>
                    <fullName>052</fullName>
                </value>
                <value>
                    <fullName>053</fullName>
                </value>
                <value>
                    <fullName>054</fullName>
                </value>
                <value>
                    <fullName>056</fullName>
                </value>
                <value>
                    <fullName>075</fullName>
                </value>
                <value>
                    <fullName>077</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>128</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>131</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Superfamilia__c</fullName>
        <label>Superfamilia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Superfamilia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Unidad_de_entrega__c</fullName>
        <label>Unidad de entrega</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Unidad_medida_de_entrega__c</fullName>
        <label>Unidad medida de entrega</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_eCatalogo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eCatalogo</label>
        <type>Checkbox</type>
    </fields>
    <label>Organizacion Producto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KS_Organizacion_de_Ventas__c</columns>
        <columns>KS_Canal_de_distribucion__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>KS_Superfamilia__c</columns>
        <columns>KS_Familia__c</columns>
        <columns>KS_Serie_Gama__c</columns>
        <columns>KS_Estatus_Comercial__c</columns>
        <columns>KS_Subserie__c</columns>
        <columns>KS_ID_Organizacion_Producto__c</columns>
        <columns>KS_Jerarquia_Producto__c</columns>
        <columns>KS_Producto__c</columns>
        <columns>KS_Unidad_de_entrega__c</columns>
        <columns>KS_Fecha_de_validez_Estatus_Comercial__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Nombre de Organizacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizaciones Producto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OrgProd_CamposRequeridos</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(KS_Organizacion_de_Ventas__c))
|| ISBLANK(TEXT(KS_Canal_de_distribucion__c))
|| ISBLANK(TEXT(KS_Sector__c))</errorConditionFormula>
        <errorMessage>Organización de Ventas, Canal de Distribución y Sector obligatorios.</errorMessage>
    </validationRules>
</CustomObject>